2022-01-02 Sun  Jari Aalto  <jari.aalto@tuni.fi>

	* tiny/tinyliba.el
	(ti::tmp-cl-library-check): disable. Obsoleted.

	* tiny/tinylib.el (ti::buffer-read-nth-word): byte compile fix:
	unused functions. Use goto-char to select beginning position
	according to MODE.

2020-11-28 Sat  Jari Aalto  <jari.aalto@tuni.fi>

	* tiny/*: Replace `pushnew' with `cl-pushnew'.

	* tiny/tinyreplace.el (tinyreplace-install-default-keybings):
	  Accept KEY parameter. In new Emacs M-& is `async-shell-command'
	  (tinyreplace--default-key): New.
	  (tinyreplace-install): Do not call
	  `tinyreplace-install-default-keybings'
	  (tinyreplace-define-keys-local-map): Use `tinyreplace--default-key'
	  (tinyreplace-install-default-keybings): Rewrite.

2019-05-25 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyigrep.el (tinyigrep-install-default-databases):
	Use `cl-union'.

	* tiny/tinyeat.el (eval-when-compile): require cl.

	* tiny/tinyhotlist.el (eval-when-compile): require cl.

	* tiny/tinymailbox.el: (eval-when-compile): require cl.

	* tiny/tinytab.el: (eval-when-compile): require cl.

	* tiny/tinydiff.el Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinyirc.el: Use `cl-incf'.

	* tiny/tinylibb.el: Use `cl-incf'.

	* tiny/tinylibmail.el Use `cl-incf'.

	* tiny/tinyload.el: Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinylock.el: Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinypad.el Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinypair.el: Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinypage.el: Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinyprocmail.el: Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinyreplace.el Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinysearch.el Use `cl-incf'.
	(eval-when-compile): require cl.

	* tiny/tinytag.el (tinytag-post-command): Use `cl-incf'.

	* tiny/tinyurl.el: Use `cl-incf'.
	(eval-when-compile): require cl.
